--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,6 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 #list {
@@ -49,4 +48,8 @@ main {
 
 .choice {
   margin-bottom: 0.5em;
+}
+
+#TorF {
+  font-size: 2em;
 }
