--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,8 @@ p {
   margin-bottom: 1em;
 }
 
-button {
+.choice,
+.start {
   font-size: 1em;
   padding: 0.2em;
   background-color: blueviolet;
@@ -52,4 +53,19 @@ main {
 
 #TorF {
   font-size: 2em;
+}
+
+#dev1 {
+  background-color: green;
+  padding: 0.5em;
+  position: absolute;
+  bottom: 0;
+}
+
+#dev2 {
+  background-color: red;
+  padding: 0.5em;
+  position: absolute;
+  bottom: 0;
+  left: 2em;
 }
